2004-06-23  Wim Taymans  <wim@fluendo.com>

	* gst/audiorate/gstaudiorate.c: (gst_audiorate_class_init),
	(gst_audiorate_init), (gst_audiorate_chain),
	(gst_audiorate_set_property), (gst_audiorate_get_property):
	Implement sample dropping and notify

2004-06-22  Wim Taymans  <wim@fluendo.com>

	* ext/theora/theoraenc.c: (gst_theora_enc_class_init),
	(theora_enc_sink_link), (theora_buffer_from_packet),
	(theora_push_packet), (theora_enc_chain):
	Some cleanups, make sure the timestamps are correct.

2004-06-22  Wim Taymans  <wim@fluendo.com>

	* ext/alsa/gstalsa.c: (gst_alsa_get_time), (gst_alsa_clock_update),
	(gst_alsa_change_state), (gst_alsa_update_avail),
	(gst_alsa_xrun_recovery):
	* ext/alsa/gstalsa.h:
	* ext/alsa/gstalsasrc.c: (gst_alsa_src_loop):
	Cleanups, take queued samples into account when reporting
	the time.

2004-06-22  Wim Taymans  <wim@fluendo.com>

	* gst/videorate/gstvideorate.c: (gst_videorate_class_init),
	(gst_videorate_init):
	Initialize the property as well.

2004-06-22  Wim Taymans  <wim@fluendo.com>

	* gst/videorate/gstvideorate.c: (gst_videorate_class_init),
	(gst_videorate_init), (gst_videorate_chain),
	(gst_videorate_set_property), (gst_videorate_get_property):
	Add property to make videorate silent.
	Add property to prefer new frames over old ones.

2004-06-22  Zaheer Abbas Merali  <zaheerabbas at merali.org>

	* sys/osxvideo/Makefile.am:
        Workaround so that the osxvideo .so file gets linked with the
        Cocoa, OpenGL and QuickTime frameworks

2004-06-22  Zaheer Abbas Merali  <zaheerabbas at merali.org>

	* sys/osxaudio/Makefile.am:
        Workaround so that the osxaudio .so file gets linked with the
        CoreAudio framework
 
2004-06-22  Zaheer Abbas Merali  <zaheerabbas at merali.org>

	* configure.ac:
	Whoops, my fault...fixed build issues

2004-06-22  Zaheer Abbas Merali  <zaheerabbas at merali.org>

	* configure.ac:
        Add objective-c support if running in Darwin/Mac OS X
	* sys/Makefile.am: