@@ -156,7 +156,6 @@ struct _GstAlsa {
 
   /* clocking */
   GstAlsaClock *		clock;		/* our provided clock */
-  GstClockTime			clock_base;	/* adjusted clock base time */
   snd_pcm_uframes_t		transmitted; 	/* samples transmitted since last sync 
 						   This thing actually is our master clock.
 						   We will event insert silent samples or
@@ -165,7 +164,6 @@ struct _GstAlsa {
   GstClockTime			max_discont;	/* max difference between current
   						   playback timestamp and buffers timestamps
 						 */
-  snd_pcm_status_t *status;
 };
 
 struct _GstAlsaClass {
@@ -192,10 +190,6 @@ GstCaps *		gst_alsa_fixate 	(GstPad *		pad,
 GstCaps *		gst_alsa_caps		(snd_pcm_format_t	format,
 						 gint			rate,
 						 gint			channels);
-
-GstClockTime			gst_alsa_get_time	(GstAlsa * this);
-void 				gst_alsa_clock_update 	(GstAlsa * this, GstClockTime ideal);
-
 
 /* audio processing functions */
 inline snd_pcm_sframes_t	gst_alsa_update_avail	(GstAlsa * this);
